2003-10-06  Jesper Harder  <harder@ifa.au.dk>

	* gnus.el (gnus-group-faq-directory): Update .tw entry.  From
	Albert Chun-Chieh Huang <mr894348@cs.nthu.edu.tw>

2003-10-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-blackholes): exit the loop if matches are
	found (idea from Adrian Lanz <lanz@fowi.ethz.ch>)
	(spam-check-bogofilter-headers, spam-check-blackholes, spam-check-BBDB)
	(spam-from-listed-p): use nnmail-fetch-field instead of message-fetch-field
	

2003-10-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-attachment-file-modes): Change the default
	value into 384 from ?\600 which doesn't mean an integer in XEmacs.

2003-10-03  Jesper Harder  <harder@ifa.au.dk>

	* mm-decode.el (mm-file-name-delete-control)
	(mm-file-name-delete-gotchas): New functions.
	(mm-file-name-rewrite-functions): Use them.
	(mm-attachment-file-modes): New option.
	(mm-save-part-to-file): Use it.

2003-10-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el (spam-install-hooks-function): Added Autoload cookie.

2003-10-02  Jesper Harder  <harder@ifa.au.dk>

	* pgg-def.el (pgg-default-keyserver-address): Change to
	subkeys.pgp.net.  From Michael Shields <shields@msrl.com>

2003-10-01  Simon Josefsson  <jas@extundo.com>

	* message.el (message-idna-to-ascii-rhs-1): RHS can be terminated
	by ',', as in 'foo@example.org, bar@example.org'.

2003-10-01  Jesper Harder  <harder@ifa.au.dk>

	* message.el (message-send): Fix reversed logic of supersedes
	check.

2003-09-30  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-view-part-as-charset): Doc fix,
	suggested by Norbert Koch <viteno@xemacs.org>.

2003-09-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-topic.el (gnus-topic-goto-missing-topic): Revert 2003-02-09
	change in order to correct the position where an invisible topic
	(because gnus-topic-display-empty-topics is nil) may be inserted.

2003-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>
