@@ -1,3 +1,7 @@
+2003-10-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* dns.el (query-dns): Don't error out on malformed resolv files.
+
 2003-10-06  Jesper Harder  <harder@ifa.au.dk>
 
 	* gnus.el (gnus-group-faq-directory): Update .tw entry.  From
